--- a/README.html
+++ b/README.html
@@ -32,7 +32,7 @@
 	<br>::&nbsp;<a class="nav" href="LICENSE.txt">License</a>
 	<br>::&nbsp;<a class="nav" href="docs/examples.html">Examples</a>
 	<br>::&nbsp;<a class="nav" href="docs/netbeans.html">NetBeans</a>
-	<br>::&nbsp;<a class="nav" href="docs/tips.html">Tips &amp; Tricks</a>
+	<br>::&nbsp;<a class="nav" href="docs/quickstart.html">Quick Start</a>
 	<p>
 	<b>User's&nbsp;Guide</b>
 	<br>::&nbsp;<a class="nav" href="docs/guide/index.html">Introduction</a>
@@ -43,6 +43,7 @@
 	<br>::&nbsp;<a class="nav" href="docs/guide/plastic.html">Plastic Options</a>
 	<br>::&nbsp;<a class="nav" href="docs/guide/other.html">Other Options</a>
 	<br>::&nbsp;<a class="nav" href="docs/guide/clearlook.html">ClearLook</a>
+	<br>::&nbsp;<a class="nav" href="docs/guide/building.html">Building</a>
 	<p>
 	<a class="nav" href="docs/api/index.html"><b>API Docs</b></a>
 	<p>
@@ -52,6 +53,7 @@
 	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectMailingListList">Mailing Lists</a>
 	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectIssues">Issue Tracking</a>
 	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectNewsList">News</a>
+	<br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/freeware/">More Examples</a>
         
          <!-- *********** Ende der Seitennavigation ******************************* -->
 
@@ -68,25 +70,22 @@
 	  <td>
 	<h1>:: Readme ::</h1>
 	
-	<p>
-
 	<i>JGoodies Looks, Version 1.1.2</i>
 
 	<p>
 	The JGoodies look&amp;feels make your Swing applications and applets look better. 
 	They have been optimized for readability, precise micro-design and usability. 
 
-
-	<h2>Requirements</h2>
-	The JGoodies Looks requires Java 1.3 or later. 
+	<p>
+	The Looks require Java 1.3 or later. 
 	
 
 	<h2>Getting Started</h2>
 
 	First, download and run the 
 	<a href="http://www.jgoodies.com/freeware/looksdemo/index.html">JGoodies Looks Demo</a>.
-	Then read the <a href="docs/guide/index.html">user's guide</a>,
-	and finally check out the <a href="docs/tips.html">tips</a>. 
+	Then follow the <a href="docs/quickstart.html">Quick Start</a> and
+	read the <a href="docs/guide/index.html">user's guide</a>.
 
 	If you want to use a JGoodies l&amp;f in NetBeans read
 	<a href="docs/netbeans.html">here</a>.
@@ -197,21 +196,6 @@
 	<a href="http://www.jgoodies.com/products/lookspro.html">JGoodies Looks Pro</a>
 	and <a href="http://www.jgoodies.com/products/swingsuite.html">Swing Suite</a>
 	get priority support and can contact us by mail and phone too.
-
-
-	<h2>Binary and Source Code</h2>
-
-     The JGoodies Looks require Java 1.3 or later. The following classes
-     are used for 1.4 or later and cannot be compiled in 1.3 environments:
-     <ul>
-     	<li><tt>com.jgoodies.plaf.ExtBasicArrowButtonHandler</tt>
-        <li><tt>com.jgoodies.plaf.plastic.PlasticSpinnerUI</tt>
-        <li><tt>com.jgoodies.plaf.windows.ExtWindowsSpinnerUI</tt>
-     </ul>
-     
-     Anyway, I recommend to refer the looks-1.1.2.jar in your IDE. 
-     If you want to shrink or obfuscate your deployed code you may need 
-     to exclude the 1.4 classes from the shrink/obfuscation process.
 
 
 	</td>
