Refreshed to reflect the latest changes

--- a/README.html
+++ b/README.html
@@ -188,11 +188,10 @@
 
 	<h2>Support</h2>
 	
-     	The Looks project is maintained and unofficially supported 
-	at <a href="http://www.JavaDesktop.org">JavaDesktop.org</a>, 
-	see <a href="http://looks.dev.java.net/">http://looks.dev.java.net</a>.
+    The Looks project is maintained and supported 
+	at <a href="http://looks.dev.java.net/">http://looks.dev.java.net</a>.
 
-	Customers of the 
+	Licensees of the 
 	<a href="http://www.jgoodies.com/products/lookspro.html">JGoodies Looks Pro</a>
 	and <a href="http://www.jgoodies.com/products/swingsuite.html">Swing Suite</a>
 	get priority support and can contact us by mail and phone too.
