--- a/README.html
+++ b/README.html
@@ -43,7 +43,6 @@
 	<br>::&nbsp;<a class="nav" href="docs/guide/plastic.html">Plastic Options</a>
 	<br>::&nbsp;<a class="nav" href="docs/guide/other.html">Other Options</a>
 	<br>::&nbsp;<a class="nav" href="docs/guide/clearlook.html">ClearLook</a>
-	<br>::&nbsp;<a class="nav" href="docs/guide/building.html">Building</a>
 	<p>
 	<a class="nav" href="docs/api/index.html"><b>API Docs</b></a>
 	<p>
@@ -70,14 +69,14 @@
 	  <td>
 	<h1>:: Readme ::</h1>
 	
-	<i>JGoodies Looks, Version 1.1.3</i>
+	<i>JGoodies Looks, Version 1.2 Preview 1</i>
 
 	<p>
 	The JGoodies look&amp;feels make your Swing applications and applets look better. 
 	They have been optimized for readability, precise micro-design and usability. 
 
 	<p>
-	The Looks require Java 1.3 or later. 
+	The Looks require Java 1.4 or later. 
 	
 
 	<h2>Getting Started</h2>
@@ -164,22 +163,22 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.1.3-src.zip</tt></td>
+		    <td><tt>looks-1.2pre1-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped sources for all JGoodies l&amp;fs</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.1.3.jar</tt></td>
+		    <td><tt>looks-1.2pre1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing all JGoodies l&amp;fs</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-win-1.1.3.jar</tt></td>
+		    <td><tt>looks-win-1.2pre1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing the JGoodies Windows l&amp;f</td>
 		</tr>
 		<tr>
-		    <td><tt>plastic-1.1.3.jar</tt></td>
+		    <td><tt>plastic-1.2pre1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing the JGoodies Plastic l&amp;fs</td>
 		</tr>
