--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,128 @@
 <html>
   <body>
-    This is the default project content.
-  </body>
+  
+	<i>Free High-Fidelity Windows and Multi-Platform Appearance</i>
+  
+	<p>
+	The JGoodies look&amp;feels make your Swing applications and applets
+	look better. They have been optimized for readability, precise micro-design
+	and usability. Anyway, many people have reviewed them as elegant.
+    Also these l&amp;fs simplify the multi-platform support by using
+	similar widget dimensions.
+  
+	<h3>Screenshots</h3>
+
+	<p>
+	<table width="490" border="0" cellspacing="0" cellpadding="0">
+	<tr>
+	    <td align="center" valign="bottom">
+		<a href="images/bookfinder.png">
+		<img src="images/bookfinder_sm.jpg" width="145" height="125" alt="Example 1" border="0">
+		<center>Example&nbsp;1</center>
+		</a>
+	    </td>
+	    <td>&nbsp;</td>
+	    <td align="center" valign="top">
+		<a href="images/segment.png">
+		<img src="images/segment_sm.jpg" width="145" height="125" alt="Example 2" border="0">
+		<center>Example&nbsp;2</center>
+		</a>
+	    </td>
+	    <td>&nbsp;</td>
+	    <td align="center" valign="top">
+		<a href="images/skeleton.png">
+		<img src="images/skeleton_sm.jpg" width="145" height="125" alt="Example 3" border="0">
+		<center>Example&nbsp;3</center>
+		</a>
+	    </td>
+	</tr>	
+	</table>
+
+	<h3>Download / Using the Looks</h3>
+	
+	<p>
+	You can download the Looks library, source code, tutorial, 
+	and precompiled demo application from the 
+	<a href="servlets/ProjectDocumentList">file sharing</a> section.
+	To get started read the file <tt>README.html</tt>, browse the 
+	HTML documentation, then open the JGoodies Looks Demo and 
+	browse the tutorial sources that ship with the Looks distribution.
+	
+	
+	<h3>Support</h3>
+	
+	<p>
+	The project is maintained and supported here at JavaDesktop.org.
+	API users shall direct questions to the 
+	<a href="mailto:users@looks.dev.java.net">users mailing list</a>.
+	Click <a href="http://servlets/ProjectMailingListList">here</a>  
+	to subscribe to one of the mailing lists.
+	
+	As a project observer you can log defects, request features and 
+	suggest enhancements in the 
+	<a href="servlets/ProjectIssues">issue tracking</a> section.
+
+
+    <h3>Features</h3>
+ 
+	<p><strong>:: JGoodies Windows L&amp;F :: Precise Emulation ::</strong>
+
+	The JGoodies Windows look&amp;feel focuses on a precise emulation
+	on Windows 95/98/NT/ME/2000 in the following areas: 
+	menus, icons, colors, borders, fonts, font sizes, insets, and widget dimensions.
+	It honors the screen resolution (96dpi vs. 120 dpi)
+	to adjust sizes, insets, and widget dimensions.
+	The Windows XP emulation still lags behind the classic emulation,
+	nevertheless it has been improved significantly in the Looks version 1.2.
+
+
+    <p><strong>:: High-Fidelity Multi Platform Appearance ::</strong>
+
+	Plastic is an elegant multi-platform look&amp;feel family that works very well 
+	on all Windows platforms, including XP.
+	The Plastic themes have been tweaked for a harmonic integration 
+	with the majority of desktops so that your applications
+	won't alienate a Windows user.
+
+
+	<p><strong>:: Simplifying Multi Platform Support ::</strong>
+
+	The looks help you support different Java versions and operating systems.
+	Each look is consistent over the Java versions 1.4.0x, 1.4.1x, 1.4.2x,
+	and 1.5 betas - to the possible extent w. r. t. to features of the underlying Swing API.
+
+	<p>In addition, Plastic, the JGoodies Windows look&amp;feel, and the Mac OS X native look
+	use similar widget dimensions and widget font baselines to minimize layout 
+	differences between these looks.
+
+
+	<p><strong>:: ClearLook&trade; :: Find and Fix Common Swing Misuse ::</strong>
+
+	The ClearLook technology is an add-on to the JGoodies Looks
+	that can automatically correct critical and typical Swing misuse.
+	The ClearLook algorithm performs basic steps to polish
+	your Swing UI.
+
+
+	<h3>Proof of Concept</h3>
+		
+	<p>
+	The Looks library ensures the visual quality of the 
+	JGoodies freeware, see <a href="http://www.jgoodies.com/freeware/index.html">tools and demos</a> 
+	- see yourself.
+
+
+	<h3>Acknowledgements</h3>
+	
+	<p>
+	The finished library you can now download for free has been financed 
+	by sponsors of my Java desktop activities and customers of my products. 
+	It is only with their money that I could open source and provide it at no charge. 
+	
+	<p>
+	Many thanks to all these customers and sponsors, 
+	especially the Java desktop team at Sun Microsystems. 
+
+  
+</body>
 </html>
