Fixed broken line-breaks

--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,6 @@
     Also these l&amp;fs simplify the multi-platform support by using
 	similar widget dimensions.
   
-	<h3>Screenshots</h3>
-
 	<p>
 	<table width="490" border="0" cellspacing="0" cellpadding="0">
 	<tr>
@@ -38,15 +36,20 @@
 	</tr>	
 	</table>
 
-	<h3>Download / Using the Looks</h3>
+	<h3>Download / Getting Started</h3>
 	
 	<p>
 	You can download the Looks library, source code, tutorial, 
-	and precompiled demo application from the 
+	and the precompiled JGoodies Looks Demo from the 
 	<a href="servlets/ProjectDocumentList">file sharing</a> section.
-	To get started read the file <tt>README.html</tt>, browse the 
+	To get started open the file <tt>README.html</tt>, browse the 
 	HTML documentation, then open the JGoodies Looks Demo and 
 	browse the tutorial sources that ship with the Looks distribution.
+	
+	<p>
+	A step by step description how to make your applications look 
+	better using the JGoodies Looks can be found
+	<a href="http://www.jgoodies.com/freeware/looks/quickstart.html">here</a>.
 	
 	
 	<h3>Support</h3>
@@ -55,7 +58,7 @@
 	The project is maintained and supported here at JavaDesktop.org.
 	API users shall direct questions to the 
 	<a href="mailto:users@looks.dev.java.net">users mailing list</a>.
-	Click <a href="http://servlets/ProjectMailingListList">here</a>  
+	Click <a href="servlets/ProjectMailingListList">here</a>  
 	to subscribe to one of the mailing lists.
 	
 	As a project observer you can log defects, request features and 
@@ -65,7 +68,7 @@
 
     <h3>Features</h3>
  
-	<p><strong>:: JGoodies Windows L&amp;F :: Precise Emulation ::</strong>
+	<p><strong>:: JGoodies Windows L&amp;F :: Precise Emulation ::</strong><br>
 
 	The JGoodies Windows look&amp;feel focuses on a precise emulation
 	on Windows 95/98/NT/ME/2000 in the following areas: 
@@ -76,7 +79,7 @@
 	nevertheless it has been improved significantly in the Looks version 1.2.
 
 
-    <p><strong>:: High-Fidelity Multi Platform Appearance ::</strong>
+    <p><strong>:: High-Fidelity Multi Platform Appearance ::</strong><br>
 
 	Plastic is an elegant multi-platform look&amp;feel family that works very well 
 	on all Windows platforms, including XP.
@@ -85,7 +88,7 @@
 	won't alienate a Windows user.
 
 
-	<p><strong>:: Simplifying Multi Platform Support ::</strong>
+	<p><strong>:: Simplifying Multi Platform Support ::</strong><br>
 
 	The looks help you support different Java versions and operating systems.
 	Each look is consistent over the Java versions 1.4.0x, 1.4.1x, 1.4.2x,
@@ -96,7 +99,7 @@
 	differences between these looks.
 
 
-	<p><strong>:: ClearLook&trade; :: Find and Fix Common Swing Misuse ::</strong>
+	<p><strong>:: ClearLook&trade; :: Find and Fix Common Swing Misuse ::</strong><br>
 
 	The ClearLook technology is an add-on to the JGoodies Looks
 	that can automatically correct critical and typical Swing misuse.
