Added some references.

--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,11 @@
 	<i>Free High-Fidelity Windows and Multi-Platform Appearance</i>
   
 	<p>
-	The JGoodies look&amp;feels make your Swing applications and applets
-	look better. They have been optimized for readability, precise micro-design
-	and usability. Anyway, many people have reviewed them as elegant.
-    Also these l&amp;fs simplify the multi-platform support by using
+	The JGoodies look&amp;feels make your Swing applications and applets look better. 
+	They have been optimized for readability, precise micro-design and usability. 
+    And they simplify the multi-platform support by using
 	similar widget dimensions.
+	Anyway, many people have reviewed them as elegant.
   
 	<p>
 	<table width="490" border="0" cellspacing="0" cellpadding="0">
@@ -47,9 +47,9 @@
 	browse the tutorial sources that ship with the Looks distribution.
 	
 	<p>
-	A step by step description how to make your applications look 
-	better using the JGoodies Looks can be found
-	<a href="http://www.jgoodies.com/freeware/looks/quickstart.html">here</a>.
+	A <a href="http://www.jgoodies.com/freeware/looks/quickstart.html">step-by-step 
+	description</a> helps you learn how to make your applications look 
+	better using the JGoodies Looks.
 	
 	
 	<h3>Support</h3>
@@ -68,7 +68,7 @@
 
     <h3>Features</h3>
  
-	<p><strong>:: JGoodies Windows L&amp;F :: Precise Emulation ::</strong><br>
+	<p><strong>JGoodies Windows L&amp;F :: Precise Emulation</strong><br>
 
 	The JGoodies Windows look&amp;feel focuses on a precise emulation
 	on Windows 95/98/NT/ME/2000 in the following areas: 
@@ -79,7 +79,7 @@
 	nevertheless it has been improved significantly in the Looks version 1.2.
 
 
-    <p><strong>:: High-Fidelity Multi Platform Appearance ::</strong><br>
+    <p><strong>High-Fidelity Multi Platform Appearance</strong><br>
 
 	Plastic is an elegant multi-platform look&amp;feel family that works very well 
 	on all Windows platforms, including XP.
@@ -88,7 +88,7 @@
 	won't alienate a Windows user.
 
 
-	<p><strong>:: Simplifying Multi Platform Support ::</strong><br>
+	<p><strong>Simplifying Multi Platform Support</strong><br>
 
 	The looks help you support different Java versions and operating systems.
 	Each look is consistent over the Java versions 1.4.0x, 1.4.1x, 1.4.2x,
@@ -99,12 +99,13 @@
 	differences between these looks.
 
 
-	<p><strong>:: ClearLook&trade; :: Find and Fix Common Swing Misuse ::</strong><br>
+	<p><strong>ClearLook&trade; :: Find and Fix Common Swing Misuse</strong><br>
 
 	The ClearLook technology is an add-on to the JGoodies Looks
 	that can automatically correct critical and typical Swing misuse.
 	The ClearLook algorithm performs basic steps to polish
 	your Swing UI.
+	<a href="http://www.jgoodies.com/freeware/looks/clearlook.html">More...</a>.
 
 
 	<h3>Proof of Concept</h3>
