--- a/www/index.html
+++ b/www/index.html
@@ -42,13 +42,13 @@
 	You can download the Looks library, source code, tutorial, 
 	and the precompiled JGoodies Looks Demo from the 
 	<a href="servlets/ProjectDocumentList">file sharing</a> section.
-	To get started open the file <tt>README.html</tt>, browse the 
-	HTML documentation, then open the JGoodies Looks Demo and 
-	browse the tutorial sources that ship with the Looks distribution.
 	
 	<p>
-	A <a href="http://www.jgoodies.com/freeware/looks/quickstart.html">step-by-step 
-	description</a> helps you learn how to make your applications look 
+	To get started open the file <tt>README.html</tt>, browse the 
+	HTML documentation, then launch the JGoodies Looks Demo and 
+	browse the tutorial sources that ship with the Looks distribution.
+	A step-by-step <a href="http://www.jgoodies.com/freeware/looks/quickstart.html">description</a> 
+	helps you learn how to make your applications look 
 	better using the JGoodies Looks.
 	
 	
@@ -94,7 +94,7 @@
 	Each look is consistent over the Java versions 1.4.0x, 1.4.1x, 1.4.2x,
 	and 1.5 betas - to the possible extent w. r. t. to features of the underlying Swing API.
 
-	<p>In addition, Plastic, the JGoodies Windows look&amp;feel, and the Mac OS X native look
+	<p>In addition, Plastic, the JGoodies Windows look&amp;feel, and the Mac OS X Aqua look
 	use similar widget dimensions and widget font baselines to minimize layout 
 	differences between these looks.
 
@@ -112,7 +112,7 @@
 		
 	<p>
 	The Looks library ensures the visual quality of the 
-	JGoodies freeware, see <a href="http://www.jgoodies.com/freeware/index.html">tools and demos</a> 
+	JGoodies freeware <a href="http://www.jgoodies.com/freeware/index.html">tools and demos</a> 
 	- see yourself.
 
 
