Refreshed for the 1.2.1 snapshot

--- a/README.html
+++ b/README.html
@@ -69,7 +69,7 @@
 	  <td>
 	<h1>:: Readme ::</h1>
 	
-	<i>JGoodies Looks, Version 1.2.0</i>
+	<i>JGoodies Looks, Version 1.2.1 Snapshot</i>
 
 	<p>
 	The JGoodies look&amp;feels make your Swing applications and applets look better. 
@@ -163,22 +163,22 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.2.0-src.zip</tt></td>
+		    <td><tt>looks-1.2.1-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped sources for all JGoodies l&amp;fs</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.2.0.jar</tt></td>
+		    <td><tt>looks-1.2.1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing all JGoodies l&amp;fs</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-win-1.2.0.jar</tt></td>
+		    <td><tt>looks-win-1.2.1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing the JGoodies Windows l&amp;f</td>
 		</tr>
 		<tr>
-		    <td><tt>plastic-1.2.0.jar</tt></td>
+		    <td><tt>plastic-1.2.1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing the JGoodies Plastic l&amp;fs</td>
 		</tr>
@@ -209,7 +209,7 @@
 <tr>
     <td nowrap="nowrap" bgcolor="F4f3f3">
       <div style="font-size: 10px; margin-left: 17px; margin-top: 20px; margin-right: 10px; margin-bottom: 4px;">
-      (c) 2003, 2004 JGoodies
+      (c) 2001-2004 JGoodies
       </div>
     </td>
     <td width="1" bgcolor="E7E5E5"></td>
