--- a/README.html
+++ b/README.html
@@ -76,7 +76,7 @@
 	They have been optimized for readability, precise micro-design and usability. 
 
 	<p>
-	The Looks require Java 1.4 or later. 
+	Since version 1.2 the Looks require Java 1.4 or later. 
 	
 
 	<h2>Getting Started</h2>
@@ -189,11 +189,34 @@
 	
     The Looks project is maintained and supported 
 	at <a href="http://looks.dev.java.net/">http://looks.dev.java.net</a>.
-
-	Licensees of the 
-	<a href="http://www.jgoodies.com/products/lookspro.html">JGoodies Looks Pro</a>
-	and <a href="http://www.jgoodies.com/products/swingsuite.html">Swing Suite</a>
-	get priority support and can contact us by mail and phone too.
+	Send questions to 
+	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
+	<b>Do not send personal mail!</b>
+	
+	
+	<h2>Related Projects</h2>
+	
+	The <a href="http://winlaf.dev.java.net/">winlaf project</a> 
+	hosts another Windows look&amp;feel. 
+	Recently we started	to join our efforts in making the 
+	Windows look&amp;feel look and feel like Windows.
+	
+	<p>
+	As of the Looks 1.2.1 and winlaf 0.4.1, the JGoodies Windows l&amp;f 
+	provides a more precise micro design for 96dpi and 120dpi which 
+	leads to better readability and legibility if used with a
+	precise layout system such as 
+	the <a href="http://forms.dev.java.net/">JGoodies Forms</a>.
+	Also, the JGoodies Windows l&amp;f uses component sizes that
+	are closer to the native original and make it easier to switch
+	the look&amp;feel to the multiplatform Plastic l&amp;f family.
+	
+	<p>
+	Currently both the winlaf and JGoodies l&amp;f fix bugs in the 
+	Sun Windows l&f that are not addressed by the other project.
+	Hopefully, we can move the most important solutions to the Sun
+	1.5.0 Windows l&amp;f and catch up with each others project.
+	
 
 
 	</td>
