Uses new SourceCast names.

--- a/www/index.html
+++ b/www/index.html
@@ -15,23 +15,17 @@
 	<tr>
 	    <td align="center" valign="bottom">
 		<a href="images/bookfinder.png">
-		<img src="images/bookfinder_sm.jpg" width="145" height="125" alt="Example 1" border="0">
-		<center>Example&nbsp;1</center>
-		</a>
+		<img src="images/bookfinder_sm.jpg" width="145" height="125" alt="Example 1" border="0"></a>
 	    </td>
 	    <td>&nbsp;</td>
 	    <td align="center" valign="top">
 		<a href="images/skeleton.png">
-		<img src="images/skeleton_sm.jpg" width="145" height="125" alt="Example 3" border="0">
-		<center>Example&nbsp;2</center>
-		</a>
+		<img src="images/skeleton_sm.jpg" width="145" height="125" alt="Example 3" border="0"></a>
 	    </td>
 	    <td>&nbsp;</td>
 	    <td align="center" valign="top">
 		<a href="images/segment.png">
-		<img src="images/segment_sm.jpg" width="145" height="125" alt="Example 2" border="0">
-		<center>Example&nbsp;3</center>
-		</a>
+		<img src="images/segment_sm.jpg" width="145" height="125" alt="Example 2" border="0"></a>
 	    </td>
 	</tr>	
 	</table>
@@ -41,7 +35,7 @@
 	<p>
 	You can download the Looks library, source code, tutorial, 
 	and the precompiled JGoodies Looks Demo from the 
-	<a href="servlets/ProjectDocumentList">file sharing</a> section.
+	<a href="servlets/ProjectDocumentList">documents &amp; files</a> section.
 	
 	<p>
 	To get started open the file <tt>README.html</tt>, browse the 
@@ -63,7 +57,16 @@
 	
 	As a project observer you can log defects, request features and 
 	suggest enhancements in the 
-	<a href="servlets/ProjectIssues">issue tracking</a> section.
+	<a href="servlets/ProjectIssues">issue tracker</a>.
+	
+	<p>
+	Before you enter a bug report, please check the existing issues
+	and make sure that the problem appears with the JGoodies L&amp;f only,
+	not with the associated Sun L&amp;f (Plastic -> Metal, JGoodies Windows -> Sun Windows).
+	If you have found a bug, please provide the following information:
+	JRE vendor, JRE version, JRE build, OS, OS version, Looks version,
+	Look&amp;feel used. For example Sun J2SE 1.4.2_03, Windows 2000,
+	Looks 1.2.1, PlasticXP.
 
 
     <h3>Features</h3>
