--- a/www/index.html
+++ b/www/index.html
@@ -60,12 +60,12 @@
 	<a href="servlets/ProjectIssues">issue tracker</a>.
 	
 	<p>
-	Before you enter a bug report, please check the existing issues
-	and make sure that the problem appears with the JGoodies L&amp;f only,
-	not with the associated Sun L&amp;f (Plastic -> Metal, JGoodies Windows -> Sun Windows).
+	Before you enter a bug report, please make sure that the problem appears 
+	with the JGoodies L&amp;f only,	not with the associated Sun L&amp;f 
+	(Plastic -> Metal, JGoodies Windows -> Sun Windows).
 	If you have found a bug, please provide the following information:
 	JRE vendor, JRE version, JRE build, OS, OS version, Looks version,
-	Look&amp;feel used. For example Sun J2SE 1.4.2_03, Windows 2000,
+	Look&amp;feel used. For example: Sun J2SE 1.4.2_03, Windows 2000,
 	Looks 1.2.1, PlasticXP.
 
 
