Extended; integrated tips and FAQ

--- a/README.html
+++ b/README.html
@@ -33,6 +33,8 @@
 	<br>::&nbsp;<a class="nav" href="docs/examples.html">Examples</a>
 	<br>::&nbsp;<a class="nav" href="docs/netbeans.html">NetBeans</a>
 	<br>::&nbsp;<a class="nav" href="docs/quickstart.html">Quick Start</a>
+	<br>::&nbsp;<a class="nav" href="docs/tips.html">Tips &amp; Tricks</a>
+	<br>::&nbsp;<a class="nav" href="docs/faq.html">FAQ</a>
 	<p>
 	<b>User's&nbsp;Guide</b>
 	<br>::&nbsp;<a class="nav" href="docs/guide/index.html">Introduction</a>
@@ -49,9 +51,9 @@
 	<b>Web Pages</b>
 	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/">Project Home</a>
 	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectDocumentList">Downloads</a>
+	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectNewsList">Announcements</a>
 	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectMailingListList">Mailing Lists</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectIssues">Issue Tracking</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectNewsList">News</a>
+	<br>::&nbsp;<a class="nav" href="http://looks.dev.java.net/servlets/ProjectIssues">Issue Tracker</a>
 	<br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/freeware/">More Examples</a>
         
          <!-- *********** Ende der Seitennavigation ******************************* -->
@@ -67,16 +69,19 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme ::</h1>
+	<h1>:: Readme :: Looks 1.2.1 ::</h1>
 	
-	<i>JGoodies Looks, Version 1.2.1</i>
+	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
 	<p>
-	The JGoodies look&amp;feels make your Swing applications and applets look better. 
-	They have been optimized for readability, precise micro-design and usability. 
+	The JGoodies Looks make your Swing applications and applets look better. 
+	The package consists of a Windows look&amp;feel and the Plastic look&amp;feel family.
+	These have been optimized for readability, precise micro-design and usability. 
 
 	<p>
-	Since version 1.2 the Looks require Java 1.4 or later. 
+	The Looks require Java 1.4 or later. 
+	A version for Java 1.3 is 
+	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=625">here</a>.
 	
 
 	<h2>Getting Started</h2>
@@ -88,7 +93,29 @@
 
 	If you want to use a JGoodies l&amp;f in NetBeans read
 	<a href="docs/netbeans.html">here</a>.
+	
+	As&nbsp;a&nbsp;next&nbsp;step you can study the 
+	<a href="http://www.jgoodies.com/articles/">JGoodies articles and presentations</a>.
+	
 
+	<h2>Support</h2>
+	
+		You can subscribe to the 
+		<a href="https://looks.dev.java.net/servlets/ProjectMailingListList">users mailing list</a> 
+		and  
+		<a href="https://looks.dev.java.net/servlets/SummarizeList?listName=users&by=subject">browse</a>
+		or
+		<a href="https://looks.dev.java.net/servlets/SearchList?listName=users&by=subject">search</a>
+		the list's archive.
+		In case of a new problem, you can direct questions to 
+		<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
+	    
+	    Also, you can use the 
+	    <a href="https://looks.dev.java.net/servlets/ProjectIssues">issue tracker</a>
+	    to find and enter issues around the Looks.
+
+	    <b>Do&nbsp;not&nbsp;send personal mail!</b>
+			
 
 	<h2>Distribution Contents</h2>
 
@@ -185,15 +212,6 @@
 		</table>
 
 
-	<h2>Support</h2>
-	
-    The Looks project is maintained and supported 
-	at <a href="http://looks.dev.java.net/">http://looks.dev.java.net</a>.
-	Send questions to 
-	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
-	<b>Do not send personal mail!</b>
-	
-	
 	<h2>Related Projects</h2>
 	
 	The <a href="http://winlaf.dev.java.net/">winlaf project</a> 
@@ -218,6 +236,17 @@
 	1.5.0 Windows l&amp;f and catch up with each others project.
 	
 
+	<h2>Acknowledgements</h2>
+		
+	The Looks project has been financed by sponsors of my Java desktop activities 
+	and customers of my products. It is only with their money that 
+	I could open source and provide them at no charge.
+
+	<p>		
+	Many thanks to all these customers and sponsors, especially 
+	the Java desktop team at Sun Microsystems.
+
+
 
 	</td>
 	</tr>
@@ -232,7 +261,7 @@
 <tr>
     <td nowrap="nowrap" bgcolor="F4f3f3">
       <div style="font-size: 10px; margin-left: 17px; margin-top: 20px; margin-right: 10px; margin-bottom: 4px;">
-      (c) 2001-2004 JGoodies
+      (c) 2004 JGoodies
       </div>
     </td>
     <td width="1" bgcolor="E7E5E5"></td>
