--- a/README.html
+++ b/README.html
@@ -7,7 +7,7 @@
 	<meta name="author"	 content="Karsten Lentzsch">
 	<meta name="keywords"	 content="JGoodies Looks Java Look Feel Swing UI Design Usability Lentzsch Kiel">
 	<meta name="robots"	 content="index, follow">
-	<meta name="date"	 content="2003-08-14">
+	<meta name="date"	 content="2004-03-15">
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" marginheight="0" marginwidth="0" topmargin="0" bottommargin="0" >
@@ -69,7 +69,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.2.1 ::</h1>
+	<h1>:: Readme :: Looks 1.2.2 Snapshot::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -116,6 +116,7 @@
 
 	    <b>Do&nbsp;not&nbsp;send personal mail!</b>
 			
+
 
 	<h2>Distribution Contents</h2>
 
@@ -195,17 +196,17 @@
 		    <td>zipped sources for all JGoodies l&amp;fs</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.2.1.jar</tt></td>
+		    <td><tt>looks-1.2.2.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing all JGoodies l&amp;fs</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-win-1.2.1.jar</tt></td>
+		    <td><tt>looks-win-1.2.2.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing the JGoodies Windows l&amp;f</td>
 		</tr>
 		<tr>
-		    <td><tt>plastic-1.2.1.jar</tt></td>
+		    <td><tt>plastic-1.2.2.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>a JAR containing the JGoodies Plastic l&amp;fs</td>
 		</tr>
@@ -220,7 +221,7 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.2.1 and winlaf 0.4.1, the JGoodies Windows l&amp;f 
+	As of the Looks 1.2.2 and winlaf 0.4.1, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
 	leads to better readability and legibility if used with a
 	precise layout system such as 
