--- a/README.html
+++ b/README.html
@@ -69,7 +69,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.2.2 Snapshot::</h1>
+	<h1>:: Readme :: Looks 1.2.2 ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -191,24 +191,14 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.2.1-src.zip</tt></td>
+		    <td><tt>looks-1.2.2-src.zip</tt></td>
 		    <td>&nbsp;</td>
-		    <td>zipped sources for all JGoodies l&amp;fs</td>
+		    <td>zipped library sources</td>
 		</tr>
 		<tr>
 		    <td><tt>looks-1.2.2.jar</tt></td>
 		    <td>&nbsp;</td>
-		    <td>a JAR containing all JGoodies l&amp;fs</td>
-		</tr>
-		<tr>
-		    <td><tt>looks-win-1.2.2.jar</tt></td>
-		    <td>&nbsp;</td>
-		    <td>a JAR containing the JGoodies Windows l&amp;f</td>
-		</tr>
-		<tr>
-		    <td><tt>plastic-1.2.2.jar</tt></td>
-		    <td>&nbsp;</td>
-		    <td>a JAR containing the JGoodies Plastic l&amp;fs</td>
+		    <td>the library jar</td>
 		</tr>
 		</table>
 
