--- a/README.html
+++ b/README.html
@@ -7,7 +7,7 @@
 	<meta name="author"	 content="Karsten Lentzsch">
 	<meta name="keywords"	 content="JGoodies Looks Java Look Feel Swing UI Design Usability Lentzsch Kiel">
 	<meta name="robots"	 content="index, follow">
-	<meta name="date"	 content="2004-03-15">
+	<meta name="date"	 content="2004-06-03">
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" marginheight="0" marginwidth="0" topmargin="0" bottommargin="0" >
@@ -69,7 +69,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.2.2 ::</h1>
+	<h1>:: Readme :: Looks 1.3.0 Preview ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -191,12 +191,12 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.2.2-src.zip</tt></td>
+		    <td><tt>looks-1.3.0-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped library sources</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.2.2.jar</tt></td>
+		    <td><tt>looks-1.3.0.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
@@ -211,7 +211,7 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.2.2 and winlaf 0.4.1, the JGoodies Windows l&amp;f 
+	As of the Looks 1.3.0 and winlaf 0.4.1, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
 	leads to better readability and legibility if used with a
 	precise layout system such as 
