Consistent support, acknowledgements and help sections

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
 	</tr>	
 	</table>
 
+
 	<h3>Download / Getting Started</h3>
 	
 	<p>
@@ -49,24 +50,36 @@
 	<h3>Support</h3>
 	
 	<p>
-	The project is maintained and supported here at JavaDesktop.org.
-	API users shall direct questions to the 
-	<a href="mailto:users@looks.dev.java.net">users mailing list</a>.
-	Click <a href="servlets/ProjectMailingListList">here</a>  
-	to subscribe to one of the mailing lists.
+	<b>Do not send personal mail!</b>
 	
-	As a project observer you can log defects, request features and 
-	suggest enhancements in the 
-	<a href="servlets/ProjectIssues">issue tracker</a>.
+	<p>
+	You may subscribe to the 
+	<a href="servlets/ProjectMailingListList">users mailing list</a> 
+	and  
+	<a href="servlets/SummarizeList?listName=users&by=subject">browse</a>
+	or
+	<a href="servlets/SearchList?listName=users&by=subject">search</a>
+	the list's archive.
+	And you can direct new questions to 
+	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
+	Please 
+	<a href="servlets/ProjectMailingListList">register</a> 
+    with this list before you post; otherwise I need to manually accept your messages.
+	    
+    Also, you can use the 
+    <a href="servlets/ProjectIssues">issue tracker</a>
+    to find issues regarding the Looks. As a project observer you can log defects, 
+    request features and suggest enhancements.
+
 	
 	<p>
 	Before you enter a bug report, please make sure that the problem appears 
-	with the JGoodies L&amp;f only,	not with the associated Sun L&amp;f 
+	with the JGoodies L&amp;f only,	not with the parent Sun L&amp;f 
 	(Plastic -> Metal, JGoodies Windows -> Sun Windows).
 	If you have found a bug, please provide the following information:
 	JRE vendor, JRE version, JRE build, OS, OS version, Looks version,
-	Look&amp;feel used. For example: Sun J2SE 1.4.2_03, Windows 2000,
-	Looks 1.2.1, PlasticXP.
+	Look&amp;feel used. For example: Sun J2SE 1.4.2_05, Windows 2000,
+	Looks 1.2.2, PlasticXP.
 
 
     <h3>Features</h3>
@@ -95,20 +108,11 @@
 
 	The looks help you support different Java versions and operating systems.
 	Each look is consistent over the Java versions 1.4.0x, 1.4.1x, 1.4.2x,
-	and 1.5 betas - to the possible extent w. r. t. to features of the underlying Swing API.
+	and 1.5 - to the possible extent w. r. t. to features of the underlying Swing API.
 
 	<p>In addition, Plastic, the JGoodies Windows look&amp;feel, and the Mac OS X Aqua look
 	use similar widget dimensions and widget font baselines to minimize layout 
 	differences between these looks.
-
-
-	<p><strong>ClearLook&trade; :: Find and Fix Common Swing Misuse</strong><br>
-
-	The ClearLook technology is an add-on to the JGoodies Looks
-	that can automatically correct critical and typical Swing misuse.
-	The ClearLook algorithm performs basic steps to polish
-	your Swing UI.
-	<a href="http://www.jgoodies.com/freeware/looks/clearlook.html">More...</a>.
 
 
 	<h3>Proof of Concept</h3>
@@ -122,13 +126,20 @@
 	<h3>Acknowledgements</h3>
 	
 	<p>
-	The finished library you can now download for free has been financed 
-	by sponsors of my Java desktop activities and customers of my products. 
-	It is only with their money that I could open source and provide it at no charge. 
+	The Looks project has been financed by customers of the 
+	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>
+	and the Java desktop team at Sun Microsystems. 
+	It is only with their money that I can provide, maintain and improve 
+	this library at no charge.
+
+
+	<h3>You can Help</h3>
 	
 	<p>
-	Many thanks to all these customers and sponsors, 
-	especially the Java desktop team at Sun Microsystems. 
+	If you are a professional user, satisfied with the JGoodies Looks, you may help me
+	finance my&nbsp;Java desktop activities by licensing the commercial 
+	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>.
+
 
   
 </body>
