--- a/README.html
+++ b/README.html
@@ -228,14 +228,19 @@
 
 	<h2>Acknowledgements</h2>
 		
-	The Looks project has been financed by sponsors of my Java desktop activities 
-	and customers of my products. It is only with their money that 
-	I could open source and provide them at no charge.
+	The Looks project has been financed by customers of the 
+	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>
+	and the Java desktop team at Sun Microsystems. 
+	It is only with their money that I can provide, maintain and improve 
+	this library at no charge.
 
-	<p>		
-	Many thanks to all these customers and sponsors, especially 
-	the Java desktop team at Sun Microsystems.
 
+	<h2>You can Help</h2>
+	
+	If you are a professional user, satisfied with the JGoodies Looks, you may help me
+	finance my&nbsp;Java desktop activities by licensing the commercial 
+	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>.
+	
 
 
 	</td>
