Refreshed docs for the build of Oct-10-2004

--- a/README.html
+++ b/README.html
@@ -99,21 +99,27 @@
 
 	<h2>Support</h2>
 	
-		You can subscribe to the 
-		<a href="https://looks.dev.java.net/servlets/ProjectMailingListList">users mailing list</a> 
-		and  
-		<a href="https://looks.dev.java.net/servlets/SummarizeList?listName=users&by=subject">browse</a>
-		or
-		<a href="https://looks.dev.java.net/servlets/SearchList?listName=users&by=subject">search</a>
-		the list's archive.
-		In case of a new problem, you can direct questions to 
-		<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
-	    
-	    Also, you can use the 
-	    <a href="https://looks.dev.java.net/servlets/ProjectIssues">issue tracker</a>
-	    to find and enter issues around the Looks.
+	<b>Please check the FAQ and do&nbsp;not&nbsp;send personal mail!</b>
+	<p>
 
-	    <b>Do&nbsp;not&nbsp;send personal mail!</b>
+	You may subscribe to the 
+	<a href="https://looks.dev.java.net/servlets/ProjectMailingListList">users mailing list</a> 
+	and  
+	<a href="https://looks.dev.java.net/servlets/SummarizeList?listName=users&by=subject">browse</a>
+	or
+	<a href="https://looks.dev.java.net/servlets/SearchList?listName=users&by=subject">search</a>
+	the list's archive.
+	And you can direct new questions to 
+	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
+	Please 
+	<a href="https://looks.dev.java.net/servlets/ProjectMailingListList">register</a> 
+    with this list before you post; otherwise I need to manually accept your messages.
+	    
+	<p>
+    Also, you can use the 
+    <a href="https://looks.dev.java.net/servlets/ProjectIssues">issue tracker</a>
+    to find issues regarding the Looks. As a project observer you can log defects, 
+    request features and suggest enhancements.
 			
 
 
@@ -223,7 +229,7 @@
 	Currently both the winlaf and JGoodies l&amp;f fix bugs in the 
 	Sun Windows l&f that are not addressed by the other project.
 	Hopefully, we can move the most important solutions to the Sun
-	1.5.0 Windows l&amp;f and catch up with each others project.
+	1.5.1 Windows l&amp;f and catch up with each others project.
 	
 
 	<h2>Acknowledgements</h2>
