Refreshed for the build of January 8, 2005.

--- a/README.html
+++ b/README.html
@@ -80,7 +80,9 @@
 	<p>
 	The Looks require Java 1.4 or later. 
 	A version for Java 1.3 is 
-	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=625">here</a>.
+	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList">here</a>.
+    Java 1.5 is now supported, but some micro design improvements 
+    made in the Looks are optimized for Java 1.4.2 and Java 1.4.1.
 	
 
 	<h2>Getting Started</h2>
@@ -238,7 +240,11 @@
 	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>
 	and the Java desktop team at Sun Microsystems. 
 	It is only with their money that I can provide, maintain and improve 
-	this library at no charge.
+	this library at no charge.<p>
+	
+	Many thanks to Andrej Golovnin who has reported, verified, managed
+	and fixed several issues. His patches are the major contribution 
+	for the Looks 1.3.
 
 
 	<h2>You can Help</h2>
