--- a/README.html
+++ b/README.html
@@ -218,7 +218,7 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.3 Beta and winlaf 0.5, the JGoodies Windows l&amp;f 
+	As of the Looks 1.3 RC and winlaf 0.5, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
 	leads to better readability and legibility if used with a
 	precise layout system such as 
@@ -237,8 +237,7 @@
 	<h2>Acknowledgements</h2>
 		
 	The Looks project has been financed by customers of the 
-	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>
-	and the Java desktop team at Sun Microsystems. 
+	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.<p>
 	
