Uses a page layout similar to the binding and forms.

--- a/www/index.html
+++ b/www/index.html
@@ -31,12 +31,17 @@
 	</table>
 
 
-	<h3>Download / Getting Started</h3>
+	<h3>Download</h3>
 	
 	<p>
-	You can download the Looks library, source code, tutorial, 
-	and the precompiled JGoodies Looks Demo from the 
-	<a href="servlets/ProjectDocumentList">documents &amp; files</a> section.
+	You can 
+	<a href="servlets/ProjectDocumentList">download</a> 
+	the latest release, archived versions, and the precompiled 
+	JGoodies. Each release includes the binary library JAR, 
+	library sources, documentation, and a tutorial. 
+	
+
+	<h3>Documentation</h3>
 	
 	<p>
 	To get started open the file <tt>README.html</tt>, browse the 
@@ -45,6 +50,11 @@
 	A step-by-step <a href="http://www.jgoodies.com/freeware/looks/quickstart.html">description</a> 
 	helps you learn how to make your applications look 
 	better using the JGoodies Looks.
+	
+	<p>
+	You may also study the presentation "First Aid for Swing" at
+	the <a href="http://www.jgoodies.com/articles/">JGoodies articles page</a>.
+	
 	
 	
 	<h3>Support</h3>
@@ -79,7 +89,7 @@
 	If you have found a bug, please provide the following information:
 	JRE vendor, JRE version, JRE build, OS, OS version, Looks version,
 	Look&amp;feel used. For example: Sun J2SE 1.4.2_05, Windows 2000,
-	Looks 1.2.2, PlasticXP.
+	Looks 1.3, PlasticXP.
 
 
     <h3>Features</h3>
@@ -127,17 +137,16 @@
 	
 	<p>
 	The Looks project has been financed by customers of the 
-	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>
-	and the Java desktop team at Sun Microsystems. 
+	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.
 
 
-	<h3>You can Help</h3>
+	<h3>Please Help!</h3>
 	
 	<p>
-	If you are a professional user, satisfied with the JGoodies Looks, you may help me
-	finance my&nbsp;Java desktop activities by licensing the commercial 
+	If you are a professional user, satisfied with the JGoodies Looks, please help me
+	finance my Java desktop activities by licensing the commercial 
 	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>.
 
 
