--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.3 Release Candidate ::</h1>
+	<h1>:: Readme :: Looks 1.3 ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -198,12 +198,12 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.3rc-src.zip</tt></td>
+		    <td><tt>looks-1.3-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped library sources</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.3rc.jar</tt></td>
+		    <td><tt>looks-1.3.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
