--- a/www/index.html
+++ b/www/index.html
@@ -37,8 +37,8 @@
 	You can 
 	<a href="servlets/ProjectDocumentList">download</a> 
 	the latest release, archived versions, and the precompiled 
-	JGoodies. Each release includes the binary library JAR, 
-	library sources, documentation, and a tutorial. 
+	JGoodies Looks Demo. Each Looks release includes the binary library JAR, 
+	library sources, documentation, and tutorial sources. 
 	
 
 	<h3>Documentation</h3>
@@ -51,7 +51,6 @@
 	helps you learn how to make your applications look 
 	better using the JGoodies Looks.
 	
-	<p>
 	You may also study the presentation "First Aid for Swing" at
 	the <a href="http://www.jgoodies.com/articles/">JGoodies articles page</a>.
 	
