--- a/README.html
+++ b/README.html
@@ -198,12 +198,12 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.3-src.zip</tt></td>
+		    <td><tt>looks-1.3.0-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped library sources</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.3.jar</tt></td>
+		    <td><tt>looks-1.3.0.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
@@ -218,7 +218,7 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.3 RC and winlaf 0.5, the JGoodies Windows l&amp;f 
+	As of the Looks 1.3 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
 	leads to better readability and legibility if used with a
 	precise layout system such as 
