Ref to Java 1.3 version change to point to the new Archive folder.

--- a/src/share/overview.html
+++ b/src/share/overview.html
@@ -41,6 +41,11 @@
 	The package consists of a Windows look&amp;feel and the Plastic look&amp;feel family.
 	These have been optimized for readability, precise micro-design and usability. 
 
+	<p>
+	The Looks require Java 1.4 or later. 
+	A version for Java 1.3 is 
+	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">here</a>.
+
 	 
 	 <h2>Getting Started</h2>
 	 
