--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.3 ::</h1>
+	<h1>:: Readme :: Looks 1.3.1 ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -80,7 +80,7 @@
 	<p>
 	The Looks require Java 1.4 or later. 
 	A version for Java 1.3 is 
-	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList">here</a>.
+	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">here</a>.
     Java 1.5 is now supported, but some micro design improvements 
     made in the Looks are optimized for Java 1.4.2 and Java 1.4.1.
 	
@@ -170,6 +170,11 @@
 		    <td>&nbsp;</td>
 		    <td>PhotoShop files for Plastic icons</td>
 		</tr>
+		<tr>
+		    <td><tt>src/test</tt></td>
+		    <td>&nbsp;</td>
+		    <td>sources for unit tests</td>
+		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
 		    <td><tt>LICENSE.txt</tt></td>
@@ -198,12 +203,12 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.3.0-src.zip</tt></td>
+		    <td><tt>looks-1.3.1-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped library sources</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.3.0.jar</tt></td>
+		    <td><tt>looks-1.3.1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
@@ -218,7 +223,7 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.3 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
+	As of the Looks 1.3.1 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
 	leads to better readability and legibility if used with a
 	precise layout system such as 
