Fixed broken references

--- a/src/share/overview.html
+++ b/src/share/overview.html
@@ -51,11 +51,11 @@
 	 
 	First, download and run the 
 	<a href="http://www.jgoodies.com/freeware/looksdemo/index.html">JGoodies Looks Demo</a>.
-	Then follow the <a href="docs/quickstart.html">Quick Start</a> and
-	read the <a href="docs/guide/index.html">user's guide</a>.
+	Then follow the <a href="../quickstart.html">Quick Start</a> and
+	read the <a href="../guide/index.html">user's guide</a>.
 
 	If you want to use a JGoodies l&amp;f in NetBeans read
-	<a href="docs/netbeans.html">here</a>.
+	<a href="../netbeans.html">here</a>.
 	
 	As&nbsp;a&nbsp;next&nbsp;step you can study the 
 	<a href="http://www.jgoodies.com/articles/">JGoodies articles and presentations</a>.
