--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.3.1 ::</h1>
+	<h1>:: Readme :: Looks 1.3.2 Snapshot ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -203,12 +203,12 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.3.1-src.zip</tt></td>
+		    <td><tt>looks-1.3.2-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped library sources</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.3.1.jar</tt></td>
+		    <td><tt>looks-1.3.2.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
@@ -223,7 +223,7 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.3.1 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
+	As of the Looks 1.3.2 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
 	leads to better readability and legibility if used with a
 	precise layout system such as 
@@ -235,8 +235,7 @@
 	<p>
 	Currently both the winlaf and JGoodies l&amp;f fix bugs in the 
 	Sun Windows l&f that are not addressed by the other project.
-	Hopefully, we can move the most important solutions to the Sun
-	Windows l&amp;f in Java 6 and catch up with each others project.
+	Several fixes could be moved to the Sun Windows l&amp;f in Java 6.
 	
 
 	<h2>Acknowledgements</h2>
