--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.3.2 Snapshot ::</h1>
+	<h1>:: Readme :: Looks 1.3.2 ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
