Started the 1.4 alpha

--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 1.3.3 Snapshot ::</h1>
+	<h1>:: Readme :: Looks 1.4 Alpha ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -78,11 +78,9 @@
 	These have been optimized for readability, precise micro-design and usability. 
 
 	<p>
-	The Looks require Java 1.4 or later. 
+	The Looks require Java 1.4 or later, Java 1.4.2 or later is recommended.
 	A version for Java 1.3 is 
 	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">here</a>.
-    Java 1.5 is now supported, but some micro design improvements 
-    made in the Looks are optimized for Java 1.4.2 and Java 1.4.1.
 	
 
 	<h2>Getting Started</h2>
@@ -203,12 +201,12 @@
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
-		    <td><tt>looks-1.3.3-src.zip</tt></td>
+		    <td><tt>looks-1.4.0-src.zip</tt></td>
 		    <td>&nbsp;</td>
 		    <td>zipped library sources</td>
 		</tr>
 		<tr>
-		    <td><tt>looks-1.3.3.jar</tt></td>
+		    <td><tt>looks-1.4.0.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
