First draft for the overhauled Plastic font choice; added font choice policy to the Windows Look&Feel

--- a/README.html
+++ b/README.html
@@ -127,7 +127,7 @@
 
 		<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		    <td><tt>looks-2.0-preview1.jar</tt></td>
+		    <td><tt>looks-2.0-pre1.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
