--- a/www/index.html
+++ b/www/index.html
@@ -98,7 +98,7 @@
 	The JGoodies Windows look&amp;feel focuses on a precise emulation
 	on Windows 95/98/NT/ME/2000/2003/XP in the following areas: 
 	menus, icons, colors, borders, fonts, font sizes, insets, and widget dimensions.
-	It honors the screen resolution (96dpi vs. 120 dpi) and
+	It honors the screen resolution (96dpi vs. 120 dpi) 
 	to adjust sizes, insets, and widget dimensions.
 
 
